<resources>
    <string name="app_name">books</string>
    <string name="title_home">Books</string>
    <string name="content_reader_gif">person reading book</string>
    <string name="txt_books_title">Books</string>
    <string name="txt_books_subtitle">have control of your daily reading, plan and follow your trajectory in books</string>
    <string name="hint_search_text_input_layout">search by name, author, year of release</string>
    <string name="title_search_noting_found">not found</string>
    <string name="title_search_results">results</string>
</resources>