<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_pink">

    <ImageView
        android:id="@+id/iv_reader"
        android:layout_width="413dp"
        android:layout_height="347dp"
        android:contentDescription="@string/content_reader_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/reader" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/txt_books_title"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_reader"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="374dp"
        android:layout_height="95dp"
        android:gravity="center"
        android:text="@string/txt_books_subtitle"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_go"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:background="@color/purple_200"
        android:text="Go"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.452" />
</androidx.constraintlayout.widget.ConstraintLayout>